--- a/official-mcp-servers/docker-compose.yml
+++ b/official-mcp-servers/docker-compose.yml
@@ -3,15 +3,15 @@ version: '3.8'
 services:
   sentry-mcp:
     build:
-      context: ./servers/src/sentry
+      context: .
+      dockerfile: custom-sentry-dockerfile
     ports:
       - "9000:8000"  # 別のポートを使用して既存のサービスと競合しないようにします
     volumes:
       - ./sentry/data:/data  # データ保存用のボリューム
     environment:
-      - SENTRY_API_TOKEN=${SENTRY_API_TOKEN}
       - SENTRY_ORG=${SENTRY_ORG}
-    command: ["--db-path", "/data/sentry.db"]  # Dockerfileのエントリーポイントに追加のコマンドを渡す
+    command: ["python", "-m", "mcp_server_sentry", "--auth-token", "${SENTRY_API_TOKEN}"]
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
