--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,8 @@
 # GitHub MCPサーバー用環境変数
-GITHUB_PERSONAL_ACCESS_TOKEN=ghp_your_personal_access_token_here
+GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token
+
+# Sentry MCPサーバー用環境変数
+SENTRY_AUTH_TOKEN=your_sentry_token
 
 # 他のMCPサーバー用環境変数
 # GITLAB_PERSONAL_ACCESS_TOKEN=your_gitlab_token
