--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,22 @@ services:
   #     - "3100:3000"
   #   restart: unless-stopped
 
+  sentry-mcp:
+    image: mcp/sentry
+    build:
+      context: ./official-mcp-servers/servers/src/sentry
+      dockerfile: Dockerfile
+    ports:
+      - "5008:5000"
+    env_file:
+      - .env
+    environment:
+      - PORT=5000
+      - SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
+    tty: true
+    stdin_open: true
+    entrypoint: ["mcp-server-sentry", "--auth-token", "${SENTRY_AUTH_TOKEN}"]
+
   time-mcp:
     image: mcp/time
     build:
