--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,5 @@ GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token
 # Sentry MCPサーバー用環境変数
 SENTRY_AUTH_TOKEN=your_sentry_token
 
-# 他のMCPサーバー用環境変数
-# GITLAB_PERSONAL_ACCESS_TOKEN=your_gitlab_token
-# SLACK_BOT_TOKEN=your_slack_token 
+SLACK_BOT_TOKEN=xoxbxxx
+SLACK_TEAM_ID=Txxx
